; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/init/extr_miscinit.c_InitStandaloneProcess.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/init/extr_miscinit.c_InitStandaloneProcess.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IsPostmasterEnvironment = common dso_local global i32 0, align 4
@LocalLatchData = common dso_local global i32 0, align 4
@MyLatch = common dso_local global i32* null, align 8
@my_exec_path = common dso_local global i8* null, align 8
@FATAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"%s: could not locate my own executable path\00", align 1
@pkglib_path = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @InitStandaloneProcess(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i32, i32* @IsPostmasterEnvironment, align 4
  %4 = icmp ne i32 %3, 0
  %5 = xor i1 %4, true
  %6 = zext i1 %5 to i32
  %7 = call i32 @Assert(i32 %6)
  %8 = call i32 (...) @InitProcessGlobals()
  %9 = call i32 (...) @InitializeLatchSupport()
  store i32* @LocalLatchData, i32** @MyLatch, align 8
  %10 = load i32*, i32** @MyLatch, align 8
  %11 = call i32 @InitLatch(i32* %10)
  %12 = load i8*, i8** @my_exec_path, align 8
  %13 = getelementptr inbounds i8, i8* %12, i64 0
  %14 = load i8, i8* %13, align 1
  %15 = sext i8 %14 to i32
  %16 = icmp eq i32 %15, 0
  br i1 %16, label %17, label %27

17:                                               ; preds = %1
  %18 = load i8*, i8** %2, align 8
  %19 = load i8*, i8** @my_exec_path, align 8
  %20 = call i64 @find_my_exec(i8* %18, i8* %19)
  %21 = icmp slt i64 %20, 0
  br i1 %21, label %22, label %26

22:                                               ; preds = %17
  %23 = load i32, i32* @FATAL, align 4
  %24 = load i8*, i8** %2, align 8
  %25 = call i32 @elog(i32 %23, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i8* %24)
  br label %26

26:                                               ; preds = %22, %17
  br label %27

27:                                               ; preds = %26, %1
  %28 = load i8*, i8** @pkglib_path, align 8
  %29 = getelementptr inbounds i8, i8* %28, i64 0
  %30 = load i8, i8* %29, align 1
  %31 = sext i8 %30 to i32
  %32 = icmp eq i32 %31, 0
  br i1 %32, label %33, label %37

33:                                               ; preds = %27
  %34 = load i8*, i8** @my_exec_path, align 8
  %35 = load i8*, i8** @pkglib_path, align 8
  %36 = call i32 @get_pkglib_path(i8* %34, i8* %35)
  br label %37

37:                                               ; preds = %33, %27
  ret void
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @InitProcessGlobals(...) #1

declare dso_local i32 @InitializeLatchSupport(...) #1

declare dso_local i32 @InitLatch(i32*) #1

declare dso_local i64 @find_my_exec(i8*, i8*) #1

declare dso_local i32 @elog(i32, i8*, i8*) #1

declare dso_local i32 @get_pkglib_path(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
